fixed date filter and overflow issue

--- a/client/src/components/app/navbar/Navbar.css
+++ b/client/src/components/app/navbar/Navbar.css
@@ -220,5 +220,6 @@ background: none!important;
   grid-template-rows: 1fr 1fr;
 }
 .flex-row {
+  overflow: hidden;
   margin-bottom: 20px;
 }
